--- a/courses.html
+++ b/courses.html
@@ -57,18 +57,18 @@
       <ol>
         <!-- number 1 -->
         <li>
-          What is the solution of linear equation systems \(3x-2y=5\), \(2x+y=7\) <br />
+          Given equations are \(2x+3y=16\), \(x-2*y=1\) <br />
           <input type="radio" id="A1" name="MC1" value="correct1" />A.
-          <label id="ans1A" for="A">\(x=3\) and \(y=2\)</label
+          <label id="ans1A" for="A">\(x=5\) and \(y=2\)</label
             ><br />
             <input type="radio" id="B1" name="MC1" value="uncorrect" />B.
-            <label for="B">\(x=3\) and \(y=2\)</label><br />
+            <label for="B">\(x=3\) and \(y=5\)</label><br />
             <input type="radio" id="C1" name="MC1" value="uncorrect" />C.
             <label for="C">\(x=3\) and \(y=2\)</label><br />
             <input type="radio" id="D1" name="MC1" value="uncorrect" />D.
-            <label for="D">\(x=3\) and \(y=2\)</label><br />
+            <label for="D">\(x=5\) and \(y=3\)</label><br />
             <input type="radio" id="E1" name="MC1" value="uncorrect" />E.
-        <label for="E">\(x=3\) and \(y=2\)</label><br />
+        <label for="E">\(x=2\) and \(y=3\)</label><br />
       </li>
       <button onclick="check1()">check</button>
       <!-- number 2 -->
