--- a/courses.html
+++ b/courses.html
@@ -57,7 +57,7 @@
       <ol>
         <!-- number 1 -->
         <li>
-          Given equations are \(2x+3y=16\), \(x-2*y=1\) <br />
+          Given equations are \(2x+3y=16\), \(x-2y=1\). What is the value of x and y. <br />
           <input type="radio" id="A1" name="MC1" value="correct1" />A.
           <label id="ans1A" for="A">\(x=5\) and \(y=2\)</label
             ><br />
