--- a/courses.html
+++ b/courses.html
@@ -106,7 +106,7 @@
       </li>
       <button onclick="check3()">check</button>
     </ol>
-    <li>find more questions about linear systems on www.quizizz.com</li>
+    <li>find more questions about linear systems on <a href="https://quizizz.com/admin/quiz/5d9158ccf02aa8001a5b83fd/three-variable-systems">www.quizizz.com</a></li>
   </div>
     
     <div class="footer">
